[package]
name = "mihomo-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
urlencoding = "2.1"
# 使用 rustls 替代 openssl，无需系统依赖
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
shellexpand = "3.0"
