[package]
name = "mihomo-tui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"      # 优化大小
lto = true           # 链接时优化
codegen-units = 1    # 单个 codegen 单元以优化大小
strip = true         # 移除符号表

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["event-stream"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }
# 使用 rustls 替代 openssl，无需系统依赖
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dependencies.libc]
version = "0.2"
